<resources>
    <string name="app_name">Store Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="register">Register</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="street">Street</string>
    <string name="number">Number</string>
    <string name="zip_code">Zip Code</string>
    <string name="product_image">Product Image</string>
    <string name="minusButton">minusButton</string>
    <string name="men">Men</string>
    <string name="women">Women</string>
    <string name="jewelery">jewelery</string>
    <string name="electronics">electronics</string>
    <string name="Close">Close</string>
    <string name="Open">Open</string>
    <string name="checkout">Checkout</string>
    <string name="all">All</string>
    <string name="rating">Rating</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="image">image</string>
    <string name="description">Description</string>
    <string name="product_name">Product Name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="favourites">Favourites</string>
    <string name="profile">Profile</string>
    <string name="cart">Cart</string>
    <string name="logout">Logout</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="dialogMassage">Are You Sure to Delete item From Favourite</string>
    <string name="dialogMassageLogout">Are You Sure to Logout</string>
    <string name="sort_by_price">Sort By Price</string>
    <string name="sort_by_name">Sort By Name</string>
    <string name="price_label">EGP: %s</string>
</resources>