<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".productDetails.DetailsFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/topAppBar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:navigationIconTint="@color/purple_200"
                app:title="@string/app_name" />
        </com.google.android.material.appbar.AppBarLayout>

        <ImageView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topAppBar"
            android:id="@+id/product_image"
            android:contentDescription="@string/image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toTopOf="@id/tv_rating"
            android:src="@drawable/download"/>


        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            android:textSize="20sp"

            app:layout_constraintBottom_toTopOf="@id/product_id"
            app:layout_constraintEnd_toStartOf="@id/ratingbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/product_image" />

        <RatingBar
            android:id="@+id/ratingbar"
            style="@android:style/Widget.Material.RatingBar.Indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="11dp"
            android:numStars="5"
            android:stepSize="0.1"
            android:backgroundTint="@color/black"
            app:layout_constraintBottom_toTopOf="@id/ratingbar"
            app:layout_constraintEnd_toStartOf="@id/topAppBar2"
            app:layout_constraintStart_toEndOf="@id/tv_rating"
            app:layout_constraintTop_toBottomOf="@id/product_image" />

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/topAppBar2"
            app:layout_constraintTop_toBottomOf="@id/product_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ratingbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar2"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/white"
                app:menu="@menu/toolbarmenu" />
        </com.google.android.material.appbar.AppBarLayout>


        <TextView
            android:id="@+id/product_id"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="11dp"
            android:layout_marginTop="12dp"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ratingbar"
            tools:text="1" />

        <TextView


            android:id="@+id/product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="11dp"
            tools:text="masklakpfok"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/product_id" />


        <TextView
            android:id="@+id/product_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:layout_marginTop="90dp"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/product_name"
            tools:text="akdnovjpokdookc[pamdlckpskdpok" />

        <TextView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="109.25"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_baseline_shopping_cart_24"
            android:text="@string/add_to_cart"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
